--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.12.0",
     "emoji-regex": "^10.4.0",
+    "framer-motion": "^12.4.7",
     "grapheme-splitter": "^1.0.4",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
